type ofboxes and inline vs inline block vs block element notes

--- a/HTML_CSS/CSS_Fundamentals/1.CSS_Fundamentals.md
+++ b/HTML_CSS/CSS_Fundamentals/1.CSS_Fundamentals.md
@@ -408,6 +408,8 @@ Another example, you want to make the links inside the `nav` bar 18px.
 
 If this is our `nav` element, we would use this simple css rule that by inheritance would make the links inside the nav 18px UNLESS otherwise stated. This works for two reasons, one is inheritance, and two is because the `nav` element is a semantic element which means it's used to provide meaning and does not render "something" on our page.
 
+We should also note that it is mostly "text and color" styles that get inherited.
+
 ```css
 nav {
     font-size: 18px;
@@ -416,13 +418,17 @@ nav {
 
 ## The Universal Selector
 
-The universal selector is used when we want certain properties to be applied to <strong> all </strong> elements. This is
-NOT inheritance. This is applying a certain property to all elements. For this to be inheritance, the universal selector
-had to be an HTML element, and it's not.
+The universal selector is used when we want certain properties to be applied to  all elements. This is NOT inheritance. This is applying a certain property to all elements. For this to be inheritance, the universal selector had to be an HTML element, and it's not.
 
-# CSS Theory #3: The CSS Box Model
+```css
+* {
+    property:value;
+}
+```
 
-As a basic definition, the CSS box model defines how elements are displayed on a webpage and how they are sized. <br>
+## CSS Theory #3: The CSS Box Model
+
+As a basic definition, the CSS box model defines how elements are displayed on a webpage and how they are sized.
 
 Elements in the CSS Box Model are:
 
@@ -441,25 +447,22 @@ Elements in the CSS Box Model are:
 
 Note that margin is not a part of the final width and height calculations because this is the space between elements.
 
-# Using Margins and Paddings
+## Using Margins and Paddings
 
-An element that has background color is a good candidate to introduce some padding to create space between the content
-and background. <br>
+An element that has background color is a good candidate to introduce some padding to create space between the content and background.
 
-The `padding` property has shorthand notation which follows `padding: top/bottom left,right`. <br>
+The `padding` property has shorthand notation which follows `padding: top/bottom left/right`.
 
 Margins can be introduced to list elements `li` to create space between them.
 
 ```css
 li {
     font-size: 18px;
-    /*line-height: 1.5; */
     margin-bottom: 10px;
 }
 ```
 
-However, this CSS rule will add margin to the last list item which is something we typically don't want. To work around
-this we use a pseudo-class:
+However, this CSS rule will add margin to the last list item which is something we typically don't want. To work around this we use a pseudo-class:
 
 ```css
 li:last-child {
@@ -469,8 +472,7 @@ li:last-child {
 
 ## Global Reset
 
-In order to work with a clean slate and not have the default margin and paddings. We will do a "Global Reset" of both
-margins and paddings to ALL elements by using the universal selector.
+In order to work with a clean slate and not have the default margin and paddings. We will do a "Global Reset" of both margins and paddings to ALL elements by using the universal selector.
 
 ```css
 * {
@@ -481,18 +483,17 @@ margins and paddings to ALL elements by using the universal selector.
 
 It is common to create vertical space using either `margin-top` or `margin-bottom`.
 
+One thing to note here is that when applying margins and borders back, we need to think about the parent element. For example, after applying the master reset, we can add margin back to our `li` by applying the styling to our `ul,ol` elements.
+
 ## Collapsing Margins
 
-This occurs when we have two margins that occupy the same space, only one of them become visible on the page. The
-outcome is a single margin whose size is the largest of the individual margins.
+This occurs when we have two margins that occupy the same space, only one of them become visible on the page. The outcome is a single margin whose size is the largest of the two individual margins.
 
 <img src="img/collapsing_margins.png" alt='diagram explaining collapsing margins' height=250>
 
-# Adding Dimensions (Height and Width)
+## Adding Dimensions (Height and Width)
 
-We can add height and width to elements using `height` and `width` styling rules in CSS. For images, it is important to
-note that we can also use `%` which will relate to the percentage of the parent element. For example, the code image we
-have has a parent element of `header` which is the full width of the page.
+We can add height and width to elements using `height` and `width` styling rules in CSS. For images, it is important to note that we can also use `%` which will relate to the percentage of the parent element. For example, the code image we have has a parent element of `header` which is the full width of the page.
 
 ```html
 
@@ -510,6 +511,7 @@ have has a parent element of `header` which is the full width of the page.
 ```
 
 So, if we specify a CSS rule for `.code-image` using `100%` width, the image will take up the full width of the webpage.
+
 This means, as we re-size the window the image will always be 100% of the parent element.
 
 ```css
@@ -519,12 +521,10 @@ This means, as we re-size the window the image will always be 100% of the parent
 }
 ```
 
-# Centering our Page
+## Centering our Page
 
-A neat trick to use when centering your page is to implement a `div` element as the parent of all other elements that
-exists on your page. So, we introduce `<div class='container'> </div>'` and set its width to   `1000px`. Now, all of its
-child element cannot have a width larger than the defined `1000px`. The logic here is "the child element can never be
-wider than the parent element."
+A neat trick to use when centering your page is to implement a `div` element as the parent of all other elements that exists on your page. So, we introduce `<div class='container'> </div>'` and set its width to   `1000px`. Now, all of its
+child element cannot have a width larger than the defined `1000px`. The logic here is "the child element can never be wider than the parent element."
 
 ```css
 .container {
@@ -532,8 +532,7 @@ wider than the parent element."
 }
 ```
 
-The next step is to add margins to both the left and right and setting them to `auto`. This ensures the left and right
-margins are always the same. Therefore, we get a nicely centered page.
+The next step is to add margins to both the left and right and setting them to `auto`. This ensures the left and right margins are always the same. This is how we get a nicely centered page.
 
 ```css
 .container {
@@ -542,12 +541,13 @@ margins are always the same. Therefore, we get a nicely centered page.
 }
 ```
 
-# CSS Theory #4: Types of Boxes
+## CSS Theory #4: Types of Boxes
 
 * Inline Boxes: Boxes that occupy only the space that they need. Only occupy the space of the element.
   * cause no line-breaks after or before the element.
   * custom box model application; height and width do not apply.
   * padding and margins are only applied left and right. (horizontally)
+
 * Block Level Boxes / Block Level Elements: boxes that occupy all the space that they can and create line breaks. In
   other words, they cannot be side by side.
   * occupy 100% of parent's element width.
@@ -556,17 +556,17 @@ margins are always the same. Therefore, we get a nicely centered page.
 
 <img src="img/block_vs_inline_diagram.png" alt="diagram showing block vs inline elements" width="850">
 
-Most of the elements that we will use are going to be block-level elements. We can turn elements into block using CSS
-rule `display; block`. Similarly, we can turn elements into inline elements using `display: inline`.
+Most of the elements that we will use are going to be block-level elements. We can turn elements into block using CSS rule `display; block`. Similarly, we can turn elements into inline elements using `display: inline`.
+
+After transforming an element into `display:block;` we will see it occupy the full width of it's parent container and the box-model will be applied.
 
 ## Inline-Block elements
 
-Inline-block elements look like inline elements from the outside but behave like block-level elements on the inside.
-Therefore, they only ocupy the content space and create no line breaks. Also, these elements are able to apply the
-standard box model properties. It is common to create inline-block elements using `display: inline-block;`. It is
-important to note that by default images have inline-block properties.
+Inline-block elements look like inline elements from the outside but behave like block-level elements on the inside. Therefore, they only occupy the content space and create no line breaks. Also, these elements are able to apply the standard box model properties. It is common to create inline-block elements using `display: inline-block;`. It is important to note that by default images have inline-block properties.
 
-# CSS Theory #5: Absolute Positioning
+A standard use-case for this property are `nav a:link` elements. So that they remain inline but also have the box model applied.
+
+## CSS Theory #5: Absolute Positioning
 
 Here we introduce two new concepts; Normal flow and Absolute Positioning.
 
