offset effect added for website for stacked images

--- a/HTML_CSS/CSS_Fundamentals/1.CSS_Fundamentals.md
+++ b/HTML_CSS/CSS_Fundamentals/1.CSS_Fundamentals.md
@@ -438,7 +438,7 @@ Elements in the CSS Box Model are:
 * Margin: Space outside the element, between elements.
 * Fill Area: area that gets filled with background color or background image.
 
-<img src="img/box_model.png" alt="the css box model" height="300">
+![The CSS Box Model](img/box_model.png)
 
 ## Element height and width calculations
 
@@ -489,7 +489,7 @@ One thing to note here is that when applying margins and borders back, we need t
 
 This occurs when we have two margins that occupy the same space, only one of them become visible on the page. The outcome is a single margin whose size is the largest of the two individual margins.
 
-<img src="img/collapsing_margins.png" alt='diagram explaining collapsing margins' height=250>
+![Collapsed Margins](img/collapsing_margins.png)
 
 ## Adding Dimensions (Height and Width)
 
@@ -554,7 +554,7 @@ The next step is to add margins to both the left and right and setting them to `
   * stacked vertically by default.
   * box model applies
 
-<img src="img/block_vs_inline_diagram.png" alt="diagram showing block vs inline elements" width="850">
+![Inline vs Block Level](img/block_vs_inline_diagram.png)
 
 Most of the elements that we will use are going to be block-level elements. We can turn elements into block using CSS rule `display; block`. Similarly, we can turn elements into inline elements using `display: inline`.
 
@@ -581,8 +581,7 @@ Here we introduce two new concepts; Normal flow and Absolute Positioning.
   * We use `top`, `bottom`, `left` or `right` to offset the element from its relatively positioned container.
   * CSS property = `position: absolute`
 
-For example, we added a Like Button to our HTML using `<button type="button" id="like-button"> ❤️ Like</button>`, with
-no regard to where it is placed since it will be positioned absolutely. Next, we define our CSS properties:
+For example, we added a Like Button to our HTML using `<button type="button" id="like-button"> ❤️ Like</button>`, with no regard to where it is placed since it will be positioned absolutely. Next, we define our CSS properties:
 
 ```css
 #like-button {
@@ -594,9 +593,7 @@ no regard to where it is placed since it will be positioned absolutely. Next, we
 }
 ```
 
-This has caused our Like Button to appear at the very top left corner of our viewport. In order to have this element in
-absolute positioning BUT NOT relative to the viewport we have to specifically set the position of the relative parent
-element to relative. <br>
+This has caused our Like Button to appear at the very top left corner of our viewport. In order to have this element in absolute positioning BUT NOT relative to the viewport we have to specifically set the position of the relative parent element to relative.
 
 For this example, the parent element of this Like button is the `body` so we set the body to relative position.
 
