completed css properties; starting layouts

--- a/HTML_CSS/CSS_Fundamentals/1.CSS_Fundamentals.md
+++ b/HTML_CSS/CSS_Fundamentals/1.CSS_Fundamentals.md
@@ -604,11 +604,9 @@ body {
 }
 ```
 
-# Pseudo-Elements
+## Pseudo-Elements
 
-Pseudo-elements are elements that don't exist in the HTML, but we can still select and style them. For example "the
-first letter" or "first line" of a paragraph. In our page, if we want to make the book emoji not appear italic we will
-use the following rule. Note that pseudo-elements are selected using two colons `::`.
+Pseudo-elements are elements that don't exist in the HTML, but we can still select and style them. For example "the first letter" or "first line" of a paragraph. In our page, if we want to make the book emoji not appear italic we will use the following rule. Note that pseudo-elements are selected using two colons `::`.
 
 ```css
 h1::first-letter {
@@ -616,8 +614,7 @@ h1::first-letter {
 }
 ```
 
-The "adjacent sibling" is the element that comes right after the elements in question. For example, if we want to style
-the `p` elements that come after the `h3` elements we can use this "adjacent sibling" property.
+The "adjacent sibling" is the element that comes right after the elements in question. For example, if we want to style the `p` elements that come after the `h3` elements we can use this "adjacent sibling" property.
 
 ```css
 /* Adjacent sibling selector */
@@ -628,8 +625,7 @@ h3 + p::first-letter {
 
 ## After and Before Pseudo-Elements
 
-The "after" pseudo-element creates a pseudo-element that will automatically be the first child of the selected element.
-This element is NOT in our HTML doc but rather created by this CSS property:
+The "after" pseudo-element creates a pseudo-element that will automatically be the first child of the selected element. This element is NOT in our HTML doc but rather created by this CSS property:
 
 ```css
 h2::after {
@@ -646,33 +642,37 @@ h2::after {
 }
 ```
 
-We must remember to make the parent element of this pseudo-element `position:relative` because we are using absolute
-positioning.
+We must remember to make the parent element of this pseudo-element `position:relative` because we are using `position:absolute;`.
 
-# What are Layouts?
+```css
+h2{
+    position;relative;
+}
+```
 
-<dl>
-    <dt> Layout</dt>
-<dd> The way text, images and other content is placed and arranged on a webpage. </dd>
-<dd> A way of introducing structure to our page into which we place our content.  </dd>
+Remember: "if you see an element with position:relative; the child of this element is position:absolute;"
 
-<dt> Building a Layout </dt>
-<dd> Arranging page elements into a visual structure, instead of simply having them placed
-one after the other. (normal flow) </dd>
+## What are Layouts?
 
-</dl>
+Layout
 
-# Page Layout vs Component Layout
+The way text, images and other content is placed and arranged on a webpage.
+A way of introducing structure to our page into which we place our content.
 
-<dl>
-    <dt> Page Layout </dt>
-<dd> Refers to the overall organization of a webpage consisting of various components. </dd>
-  <dt> Component Layout </dt>
-<dd> The organization of individual page components. </dd>
+Building a Layout
 
-</dl>
+Arranging page elements into a visual structure, instead of simply having them placed
+one after the other. (normal flow)
 
-# The 3 ways of building CSS layouts
+## Page Layout vs Component Layout
+
+Page Layouts
+Refers to the overall organization of a webpage consisting of various components.
+
+Component Layout
+The organization of individual page components.
+
+## The 3 ways of building CSS layouts
 
 1. Floats
 
