float layout and the collapsing margin

--- a/HTML_CSS/CSS_Fundamentals/1.CSS_Fundamentals.md
+++ b/HTML_CSS/CSS_Fundamentals/1.CSS_Fundamentals.md
@@ -674,22 +674,21 @@ The organization of individual page components.
 
 ## The 3 ways of building CSS layouts
 
-1. Floats
+1.Floats
 
 The old way of building layouts of all sizes, using the css property `float`. Still used but getting outdated fast.
 
-2. Flexbox
+2.Flexbox
 
 Modern way of laying out elements in a 1-dimensional row using floats. Perfect for component layouts.
 
-3. CSS Grid
+3.CSS Grid
 
 For laying out elements in a fully-fledged 2-dimensional grid. Perfect for page layouts and complex components.
 
-# Using Floats
+## Using Floats
 
-With this CSS property, the element being styled becomes sort of absolute positioned, causing other elements near it to
-float around it:
+With this CSS property, the element being styled becomes sort of absolute positioned, causing other elements near it to float around it:
 
 ```css
 .author-image {
@@ -697,8 +696,7 @@ float around it:
 }
 ```
 
-To make the other elements start AFTER the float element we can also give them the float property. This will cause them
-to start after the floating elements.
+To make the other elements start AFTER the float element we have to also give them the float property.
 
 ```css
 .main-author {
@@ -708,14 +706,22 @@ to start after the floating elements.
 }
 ```
 
-The `left` and `right` properties dictate what side of the container the element will start at. Also, a floated element
-can still take `margin` properties which will follow conventional rules. <br>
+The `left` and `right` properties dictate what side of the container the element will start at. Also, a floated element can still take `margin` properties which will follow conventional rules.
 
-When we float all the child elements of a parent element for example our `header`, we loose some padding and structure
-of the page since technically, these elements are now floating. The height of the parent element now goes to `0`
-since it now contains 0 elements. This is referred to as `the collapsing element`.
+So, if we wanted a simple two child component layout with both elements being on each side we could float each child.
 
-# Clearing Floats
+```css
+child-one{
+    float:left;
+}
+child-two{
+    float:right;
+}
+```
+
+However, when we float all the child elements of a parent element for example our `header` containing one `h1` and one `nav`, we loose some padding and structure of the page since technically, these elements are now floating. The height of the parent element now goes to `0` since it now contains 0 elements. This is referred to as `the collapsing element`.
+
+## Clearing Floats
 
 Again, a parent element will collapse when all of its child elements are floated. To fix this, we insert a `div`
 element with the class `clear` inside the parent element that collapsed and set its properties to:
@@ -745,7 +751,7 @@ element with the class `clear` inside the parent element that collapsed and set 
 ```
 
 However, we must note that this way of clearing floats is not practical because we introduce HTML code that holds no
-value. We can instead use `the clear fix` hack. <br>
+value. We can instead used the `clear fix` hack.
 
 First we add the class `clearfix` to the parent element that is collapsing. In our example this is the `header`
 element. Next we use the pseudo-element `after` in our CSS property declaration. This creates a "last child element"
@@ -768,13 +774,11 @@ following CSS properties to our pseudo-element:
 
 # Box-Sizing: Border Box
 
-We run into an issue when we add padding to the `aside` element because this extra padding causes the element to run out
-of width space. Therefore, it moves to the bottom of the page. The total width of this aside element is now 380 and
-since our total width cannot pass 1200, we get this issue. <br>
+We run into an issue when we add padding to the `aside` element because this extra padding causes the element to run out of width space. Therefore, it moves to the bottom of the page. The total width of this aside element is now 380 and
+since our total width cannot pass 1200, we get this issue.
 
-How to fix this issue? leave behind the default behavior of the box model. In terms of adding up total width and total
-height. We apply this fix using the `box-sizing: border-box` CSS property. By convention, all web developers will add
-this property to all elements in order to bypass the default behavior of the box model. <br>
+How to fix this issue? leave behind the default behavior of the box model. In terms of adding up total width and total height. We apply this fix using the `box-sizing: border-box` CSS property. By convention, all web developers will add
+this property to all elements in order to bypass the default behavior of the box model.
 
 Now, the final width and final height will simply be the values defined in the CSS property. Any padding added will
 simply subtract from the content area.
@@ -797,8 +801,7 @@ aside {
 
 # Introduction to Flexbox
 
-To get started using Flexbox, all we have to do is place the `display:flex` property on a container element. As a
-reminder, a container element is an element that has child elements, ex `div`. <br>
+To get started using Flexbox, all we have to do is place the `display:flex` property on a container element. As a reminder, a container element is an element that has child elements, ex `div`.
 
 The children elements of this parent container (flex container) are referred to as the flex items. By default, the flex
 items only take us the space needed for its text content. Space not taken up can be seen by placing a colored background
