--- a/HTML_CSS/CSS_Fundamentals/1.CSS_Fundamentals.md
+++ b/HTML_CSS/CSS_Fundamentals/1.CSS_Fundamentals.md
@@ -604,6 +604,66 @@ body {
 }
 ```
 
+## The "stacked offset" solution
+
+For HTML we have:
+
+```html
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/HTML_CSS/CSS_Fundamentals/index_styles.css">
+    <title>Document</title>
+</head>
+
+<body>
+    <div class="container">
+        <main>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque blanditiis dicta, rem possimus unde eos
+                eum, neque dolore harum repellat distinctio ullam voluptatibus sapiente alias. Aliquam doloribus
+                eligendi unde suscipit.</p>
+
+        </main>
+        <button class="original"> SUBSCRIBE </button>
+        <button class="offset"> SUBSCRIBE</button>
+    </div>
+
+</body>
+
+</html>
+```
+
+For CSS we have:
+
+```css
+body {
+    background-color: lightblue;
+}
+
+.container {
+    background-color: lightgreen;
+    width: 800px;
+    margin: 0 auto;
+    position: relative;
+}
+
+.original {
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.offset {
+    position: absolute;
+    top: 20%;
+    left: -2%;
+}
+```
+
 ## Pseudo-Elements
 
 Pseudo-elements are elements that don't exist in the HTML, but we can still select and style them. For example "the first letter" or "first line" of a paragraph. In our page, if we want to make the book emoji not appear italic we will use the following rule. Note that pseudo-elements are selected using two colons `::`.
@@ -719,12 +779,13 @@ child-two{
 }
 ```
 
-However, when we float all the child elements of a parent element for example our `header` containing one `h1` and one `nav`, we loose some padding and structure of the page since technically, these elements are now floating. The height of the parent element now goes to `0` since it now contains 0 elements. This is referred to as `the collapsing element`.
+However, when we float all the child elements of a parent element for example our `header` containing one `h1` and one `nav`, we loose padding and structure of the page since technically, these elements are now floating. The height of the parent element now goes to `0` since it now contains 0 elements. This is referred to as `the collapsing element`.
 
 ## Clearing Floats
 
-Again, a parent element will collapse when all of its child elements are floated. To fix this, we insert a `div`
-element with the class `clear` inside the parent element that collapsed and set its properties to:
+### Adding an extra div
+
+Again, a parent element will collapse when all of its child elements are floated. To fix this, we insert a `div` element with the class `clear` inside the parent element that collapsed and set its properties to:
 
 ```html
 
@@ -750,21 +811,51 @@ element with the class `clear` inside the parent element that collapsed and set 
 }
 ```
 
-However, we must note that this way of clearing floats is not practical because we introduce HTML code that holds no
-value. We can instead used the `clear fix` hack.
+However, we must note that this way of clearing floats is not practical because we introduce HTML code that holds no value.
 
-First we add the class `clearfix` to the parent element that is collapsing. In our example this is the `header`
-element. Next we use the pseudo-element `after` in our CSS property declaration. This creates a "last child element"
-for this parent element that is collapsing which is the same as adding an empty `div` manually. We then add the
-following CSS properties to our pseudo-element:
+### Clear Fix hack
+
+We can instead used the `clear fix` hack, which gets rid of the empty `div` elements. First we add the class `clearfix` to the parent element that is collapsing. In our example this is the `header` element. Next we use the pseudo-element `after` in our CSS property declaration. This creates a "last child element" for this parent element that is collapsing which is the same as adding an empty `div` manually. We then add the following CSS properties to our pseudo-element:
 
 ```css
 .clearfix::after {
     clear: both;
+    /*  By default pseudo elements are inline but we need a block level element.*/
     display: block;
+    /*  By default the content property is always needed*/
     content: '';
 }
 ```
+
+## Building a simple Float Layout
+
+When building a float layout we first define a set width to our parent container of all elements. For example, `container{width:1200px;}`. Next, we divide up this total width into the child elements that are to be floated.
+
+```css
+.container{
+    width:1200px;
+}
+article{
+    width:900px;
+    float:left;
+}
+aside{
+    width:300px;
+    float:right;
+}
+```
+
+With these properties, our `footer` will appear to float under the `aside` since by default, the behavior of float layouts is to have all "non-floated" elements float around floated ones.
+
+Therefore, we have to "clear the float" but in this case, the element to clear is the `footer`. So we add these properties:
+
+```css
+footer{
+    clear:both;
+}
+```
+
+Lastly, to add spacing between floated elements where one is floated left and one right we simply decrease the width of one element and create the "empty space".
 
 ## Floats vs Absolute Position Elements
 
@@ -772,16 +863,13 @@ following CSS properties to our pseudo-element:
 * The parent container elements of floated elements will not adjust its height.
 * With absolute positioned elements, there is no impact on surrounding elements meaning there can be overlap.
 
-# Box-Sizing: Border Box
+## Box-Sizing: Border Box
 
-We run into an issue when we add padding to the `aside` element because this extra padding causes the element to run out of width space. Therefore, it moves to the bottom of the page. The total width of this aside element is now 380 and
-since our total width cannot pass 1200, we get this issue.
+We run into an issue when we add padding to the `aside` element because this extra padding causes the element to run out of width space. Therefore, it moves to the bottom of the page. The total width of this aside element is now 380 and since our total width cannot pass 1200, we get this issue.
 
-How to fix this issue? leave behind the default behavior of the box model. In terms of adding up total width and total height. We apply this fix using the `box-sizing: border-box` CSS property. By convention, all web developers will add
-this property to all elements in order to bypass the default behavior of the box model.
+How to fix this issue? leave behind the default behavior of the box model. In terms of adding up total width and total height. We apply this fix using the `box-sizing: border-box` CSS property. By convention, all web developers will add this property to all elements in order to bypass the default behavior of the box model.
 
-Now, the final width and final height will simply be the values defined in the CSS property. Any padding added will
-simply subtract from the content area.
+Now, the final width and final height will simply be the values defined in the CSS property. Any padding added will simply subtract from the content area.
 
 ```css
 aside {
