flex box properties and how flex items behave

--- a/HTML_CSS/CSS_Fundamentals/1.CSS_Fundamentals.md
+++ b/HTML_CSS/CSS_Fundamentals/1.CSS_Fundamentals.md
@@ -869,7 +869,7 @@ We run into an issue when we add padding to the `aside` element because this ext
 
 How to fix this issue? leave behind the default behavior of the box model. In terms of adding up total width and total height. We apply this fix using the `box-sizing: border-box` CSS property. By convention, all web developers will add this property to all elements in order to bypass the default behavior of the box model.
 
-Now, the final width and final height will simply be the values defined in the CSS property. Any padding added will simply subtract from the content area.
+Now, the final width and final height will simply be the values defined in the CSS property. Any padding added will simply subtract from the content area. So if we have an element with `width: 300px;` and add `padding: 20px;` the element's content area width will reduce to `260px` keeping the TOTAL width `300px`.
 
 ```css
 aside {
@@ -887,29 +887,36 @@ aside {
 }
 ```
 
-# Introduction to Flexbox
+It is best practice to include this property in the universal selector so our best practice properties now include:
 
-To get started using Flexbox, all we have to do is place the `display:flex` property on a container element. As a reminder, a container element is an element that has child elements, ex `div`.
+```css
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+```
 
-The children elements of this parent container (flex container) are referred to as the flex items. By default, the flex
-items only take us the space needed for its text content. Space not taken up can be seen by placing a colored background
-to the parent container to visualize how much space is left. So, to summarize, horizontally the child elements only take
-up the space needed, but vertically they take up the full height of the parent element or any max child height defined.
+## Introduction to Flexbox
 
-<img src="img/flexbox-whitespace.png" alt="white space in flex box">
+To get started using Flexbox, all we have to do is place the `display:flex;` property on a parent container element. As a reminder, a container element is an element that has child elements, ex `div`.
 
-# Flexbox Common Usage
+The children elements of this parent container (flex container) are referred to as the `flex items`. By default, the flex
+items only take us the space needed for its text content; both horizontally and vertically. Space not taken up can be seen by placing a colored background to the parent container to visualize how much space is left.
+
+However, the flex items can have a height property applied from a `child flex item` that is later defined defined. For example, a `div` flex container with 5 `flex items` has one flex item with `height:150px` means ALL flex items will have `height:150px;`.
+
+This image shows a `flex item` having `height: 150px;` therefore they flex items have more height than needed.
+
+![White space in flex box](img/flexbox-whitespace.png)
 
 ## Vertical Centering
 
-A common usage for flex box is its ability to easily vertical center items. For this we use the `align-items:
-center` property.
+A common usage for flex box is its ability to easily vertically center items. For this we use the `align-items:center` property.
 
-<img src="img/vertical-align.png" alt="vertically aligned items using flexbox">
+![Vertically align using flex-box](img/vertical-align.png)
 
-Now, these items are vertically aligned except for the `CSS` block since we have a defined height. We can also use
-`flex-start` and `flex-end` properties to place the items on the top and bottom respectively. The default behavior
-of `align-items` is `stretch` which means "take up the full height of the parent container/ tallest element." <br>
+Now, these items are vertically aligned except for the `CSS` block since we have a defined height. We can also use `flex-start` and `flex-end` properties to place the items on the top and bottom respectively. The default behavior of `align-items` is `stretch` which means "take up the full height of the parent container OR tallest element."
 
 To summarize:
 
@@ -920,55 +927,37 @@ To summarize:
 
 ## Horizontal Centering
 
-We can also horizontally center/move the items around the parent container using the `justify-content:` property. A neat
-property is `justify-content: space-between` , which will take the elements and evenly space them out horizontally;
-breaking up and extra space and creating margin.
+We can also horizontally center/move the items around the parent container using the `justify-content:` property. A neat property is `justify-content: space-between` , which will take the elements and evenly space them out horizontally; breaking up and extra space and creating margin.
 
-<img src="img/space-between.png" alt="showing space-between flexbox property">
+![Space between Flex box property](img/space-between.png)
 
-# Flexbox Overview
+## Flexbox Overview
 
-<dl>
-    <dt> Flexbox </dt>
-<dd> A set of related CSS properties for building 1-dimensional layouts. </dd>
-</dl>
+Flexbox: A set of related CSS properties for building 1-dimensional layouts.
 
-The main idea for the creation of flexbox was the easy implementation of automatically dividing up the empty space in a
-parent container among its child elements. Flexbox also makes it easy to align items to one another, that is child vs
-child alignment inside a parent container. (Horizontal and Vertical Centering)
+The main idea for the creation of flexbox was the easy implementation of automatically dividing up the empty space in a parent container among its child elements. Flexbox also makes it easy to align items to one another, that is child vs child alignment inside a parent container. (Horizontal and Vertical Centering)
 
-# Flexbox Terminology
+## Flexbox Terminology
 
-<dl>
-    <dt> Flex Container </dt>
-<dd> The element on which we use flexbox. </dd>
-<dd> Created by defining the display: flex; property. </dd>
+Flex Container: The element on which we use flexbox. Created by defining the display: flex; property.
 
-<dt> Flex Items </dt>
-<dd> The direct children of the Flex Container element. </dd>
+Flex Items: The direct children of the Flex Container element.
 
-<dt> Main Axis </dt>
-<dd> Represents the horizontal axis. </dd>
+Main Axis: Represents the horizontal axis.
 
-<dt> Cross Axis </dt>
-<dd> Represents the vertical axis. </dd>
+Cross Axis: Represents the vertical axis.
 
-</dl>
+## Common Flex Container and Flex Items Properties
 
-# Common Flex Container and Flex Items Properties
+![Common Flexbox properties](img/common-flexbox.png)
 
-<img src="img/common-flexbox.png">
+## Spacing and Aligning Flex Items
 
-# Spacing and Aligning Flex Items
-
-By definition, `align-items:stretch` will vertically align our child elements inside the parent element. However, we
-might want to override this behavior and can do so using the `align-self` property.
+By definition, `align-items:stretch` will vertically align our child elements inside the parent element. However, we might want to override this behavior for a specific flex item and can do so using the `align-self` property.
 
 ## Ordering Items
 
-Items by default have the property `order:0` which means they all share the same order. This does not match the physical
-location of the item but rather the "logical order." So, we can arrange our items by defining an order less than 0 which
-will in turn define order of location. The following property will place the "learn" text first.
+Items by default have the property `order:0` which means they all share the same order. This does not match the physical location of the item but rather the "logical order." So, we can arrange our items by defining an order less than 0 which will in turn define order of location. The following property will place the "learn" text first.
 
 ```css
 .el--8 {
@@ -976,15 +965,13 @@ will in turn define order of location. The following property will place the "le
 }
 ```
 
-The same logic applies for items given an `order` greater than 0. So if we want to move the text "CSS" to the right most
-position, we give it an `order:1;` property. <br>
+The same logic applies for items given an `order` greater than 0. So if we want to move the text "CSS" to the right most position, we give it an `order:1;` property.
+
+We can think about this in terms of "relative order" where 0 represents our base and +/- from base determines the order.
 
 ## Adding space between items
 
-We can still add margin like normal however, the items might overflow the parent element. This is why, this route is not
-recommended but rather we should focus on keeping all spacing and alignment properties in the flex box container. <br>
-
-`gap` is the property we should use when adding spacing between items.
+We can still add margin like normal however, the items might overflow the parent element. We should instead focus on keeping all spacing and alignment properties in the flex box container.
 
 ```css
 /* NOT RECOMMENDED */
@@ -993,9 +980,9 @@ recommended but rather we should focus on keeping all spacing and alignment prop
 }
 ```
 
-Here we define the gap property inside the flex container and see that there is no margin being applied to the items so
-this also eliminated the need to reset the `margin-right:0;` for the last item. To summarize, this does not add margin
-but rather is a flex container property used to add spacing between items.
+`gap` is the property we should use when adding spacing between items.
+
+Here we define the gap property inside the flex container and see that there is no margin being applied to the items so this also eliminated the need to reset the `margin-right:0;` for the last item. To summarize, this does not add margin but rather is a flex container property used to add spacing between items.
 
 ```css
 .container {
@@ -1013,10 +1000,19 @@ but rather is a flex container property used to add spacing between items.
 }
 ```
 
-# The Flex Property
+## The Flex Property
 
-The `flex` property is what we use to size items. If we want our items to have a certain width, we use the
-`flex-basis:` property.
+The `flex-(something)` property is what we use to size flex items. If we want our items to have a certain width, we use the `flex-basis:` property.
+
+The `flex` property is shorthand for:
+
+* `flex-grow`: the property that determines if the flex items will fill up the flex container or only take up the width their content needs.
+* `flex-shrink`: the property that determines if flex box can shrink flex items.
+* `flex-basis`: the property used to give flex items a defined width. This is a dynamic width since flex items that need more space will not shrink but rather flex items that are not `<some-value>px` wide will grow.
+
+"By default, flex-box is allowed to shrink the flex items in order to fit into their container." So, if we define a `flex-basis: 400px` but there is not enough width in the parent container to fit all the elements, then `flex-shrink` is applied by default and the flex items shrink to fit.
+
+With default values of `flex: 0 1 auto;` --> `flex: grow, shrink, basis`
 
 ```css
 .el {
@@ -1024,20 +1020,15 @@ The `flex` property is what we use to size items. If we want our items to have a
 }
 ```
 
-## Flex-basis and Flex-Shrink
+## Flex-basis and Flex-Shrink Summary
 
-Here we are stating the width of items. For items that are larger than this width, no change will occur. For items that
-are not as wide, the element will expand to the defined width. In other words, this is treated mostly as a
-"suggested width" for the flex items. The browser in the end will implement on optimal width to the elements. <br>
+There two properties relate to flex item widths. For items that are larger than the defined `flex-basis` width, no change will occur. For items that are not as wide, the element will expand to the defined width. The browser in the end will implement on optimal width to the elements.
 
-We can define a `flex-basis: 200px` but end up with elements having `width: 118px` because this is optimal for the
-browser. Flexbox does this because by default the `flex-shrink` property is set to `1`. We can change this and force the
-elements to be the desired width by defining `flex-shrink:0` property. We must be cautious of this because sometimes the
-flex items can overflow the flex container.
+We can define a `flex-basis: 200px` but end up with elements having `width: 118px` because this is optimal for the browser. Flexbox does this because by default the `flex-shrink` property is set to `1`. We can change this and force the elements to be the desired width by defining `flex-shrink:0` property. We must be cautious of this because sometimes the flex items can overflow the flex container.
 
 ## Flex-grow
 
-The `flex-grow` property determines if elements can grow as large as they can or not.
+The `flex-grow` property determines if flex items take up the parent container space or just their "needed" content space.
 
 ```css
 .el {
@@ -1048,24 +1039,20 @@ The `flex-grow` property determines if elements can grow as large as they can or
 
 Here we have:
 
-* `flex-shrink:0` which means elements take up the width.
-* `flex-grow:1` means elements grow as large as the parent container.
+* `flex-shrink:0` means flex box cannot shrink flex items.
+* `flex-grow:1` means flex items grow as large as the parent container.
 
-We can also increase the `flex` property values which will determine which element takes up most of the available space.
-For example, is we make `html` have `flex-grow:2`: it will take up more space than the other elements. "More space"
-for this example means double because 2 is double 1. <br>
+### Flex grow individually
 
-As a best practice we should always define `flex: 1` and not use the individual `flex` properties in stand-alone
-definitions. The order of properties defined is:
+`flex-grow:1` is a property that can be applied to individual flex items. If this is done, that other flex items will only take up the space needed for their content and the remaining space is filled up by the "applied" flex item.
 
-1. Flex-grow
-2. Flex-shrink
-3. Flex-auto
+We can also increase the `flex` property values which will determine which element takes up most of the available space. For example, is we make `html` have `flex-grow:2`: it will take up more space than the other elements. Specifically, the individual flex item will get double the available space than the rest of the flex items. We could use this in a navbar where we want one item to be slightly widder than the rest.
 
-# Styling "Related Post" Section Notes
+As a best practice we should always define `flex: 1`.
 
-To style this section, we first defined our parent container to be the `li` elements. Here I made the mistake of
-selecting the `ul` elements, but we must remember that the `li` element is what holds the info, not the actual list.
+## Styling "Related Post" Section Notes
+
+To style this section, we first defined our parent container to be the `li` elements. Here I made the mistake of selecting the `ul` elements, but we must remember that the `li` element is what holds the info, not the actual list.
 
 ```html
 
@@ -1092,8 +1079,7 @@ Next, we added the flex properties to our `li` elements:
 }
 ```
 
-Here we discovered we needed to add the extra div element between the `a` and `p` tags. This is because we want these to
-elements to be grouped together and not side by side.
+Here we discovered we needed to add the extra div element between the `a` and `p` tags. This is because we want these to elements to be grouped together and not side by side.
 
 # How to move whole sections
 
